--- a/mypage07.html
+++ b/mypage07.html
@@ -10,18 +10,20 @@
         padding: 0;
       }
       .container {
+        height: 600px;
         border: 2px solid #f76707;
         border-radius: 5px;
         background-color: #fff4e6;
         padding: 2rem;
-        display: grid;        
-        /* grid-template-columns: 200px 300px 100px 400px; */
-        /* grid-template-rows: 300px 100px 100px 200px; */
-        /* grid-template-columns: 1fr 200px 3fr 5fr; */
-        /* grid-template-rows: 3fr 1fr; */
-        /* grid-template-columns: 200px repeat(4, 150px) 100px; */
-        grid-template-columns: auto repeat(2, 1fr) 100px;
-        grid-template-rows: repeat(3, 250px) 150px;
+        display: grid;
+        grid-template-columns: 1fr 4fr 2fr;
+        grid-template-rows: 100px auto 1fr auto 200px;
+        grid-template-areas:
+          "box1 box1 box1"
+          "box2 box3 box6"
+          "box2 box4 box6"
+          "box2 box5 box6"
+          "box7 box7 box7";
       }
       .container div {
         border: 2px solid #ffa94d;
@@ -32,24 +34,35 @@
       }
       .box1 {
         background-color: red;
+        grid-area: box1;
       }
       .box2 {
         background-color: greenyellow;
+        grid-area: box2;
       }
       .box3 {
         background-color: salmon;
+        grid-area: box3;
       }
       .box4 {
         background-color: aqua;
+        grid-area: box4;
       }
       .box5 {
         background-color: chocolate;
+        grid-area: box5;
       }
       .box6 {
         background-color: blue;
+        grid-area: box6;
       }
       .box7 {
         background-color: pink;
+        grid-area: box7;
+      }
+      img {
+        width: 100px;
+        height: 100px;
       }
     </style>
   </head>
@@ -58,14 +71,11 @@
       <div class="box1">One</div>
       <div class="box2">Two</div>
       <div class="box3">Three</div>
-      <div class="box4">Four</div>
-      <div class="box5">Five</div>
-      <div class="box6">Six</div>
-      <div class="box7">Seven</div>
-      <div class="box1">One</div>
-      <div class="box2">Two</div>
-      <div class="box3">Three</div>
-      <div class="box4">Four</div>
+      <div class="box4">
+        <img src="./img/imgA.png" alt="ม้า" />
+        <img src="./img/imgB.png" alt="หมา" />
+        <img src="./img/imgC.png" alt="งู" />
+      </div>
       <div class="box5">Five</div>
       <div class="box6">Six</div>
       <div class="box7">Seven</div>
